# PPIL_S6

Client/: .gitignore  CMakeLists.txt
Client/src/: Croix.cpp  Croix.h  Forme.h  Rond.cpp  Rond.h  TestClient.cpp  TestClient.h  main.cpp
Client/src/COR/: Expert.cpp  Expert.h  ExpertCharger.cpp  ExpertCharger.h  ExpertChargerArete.cpp  ExpertChargerArete.h  ExpertChargerCouleur.h  ExpertChargerFaces.cpp  ExpertChargerFaces.h  ExpertChargerRectangle.cpp  ExpertChargerRectangle.h  ExpertChargerRond.cpp  ExpertChargerRond.h  ExpertChargerTriangle.cpp  ExpertChargerTriangle.h
Client/src/Calculs/: FormesManager.cpp  FormesManager.h  Matrice22.h  Plan.cpp  Plan.h  Vecteur2D.cpp  Vecteur2D.h
Client/src/Connexion/: ConnexionServeur.cpp  ConnexionServeur.h
Client/src/Formes/: Croix.cpp  Croix.h  Forme.cpp  Forme.h  Groupe.cpp  Groupe.h  Polygone.cpp  Polygone.h  Rectangle.cpp  Rectangle.h  Rond.cpp  Rond.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h  Vecteur2D.h
Client/src/Tests/: TestClient.cpp
Client/src/Visiteur/: Visiteur.h  VisiteurDessin.cpp  VisiteurDessin.h  VisiteurDessinJava.cpp  VisiteurDessinJava.h  VisiteurSauvegarde.cpp  VisiteurSauvegarde.h  VisiteurSauvegardeTexte.cpp  VisiteurSauvegardeTexte.h
Client/src/saves/: g_aretes.txt  g_faces.txt
Serveur/ServeurPPIL/src/: Main.java
Serveur/ServeurPPIL/src/COR/: Expert.java  ExpertCroix.java  ExpertGroupe.java  ExpertNettoyage.java  ExpertPolygone.java  ExpertRectangle.java  ExpertRond.java  ExpertSegment.java  ExpertTriangle.java
Serveur/ServeurPPIL/src/Connexion/: GestionnaireFormes.java  Interlocuteur.java  Serveur.java
Serveur/ServeurPPIL/src/Forme/: Croix.java  Forme.java  Groupe.java  Polygone.java  Rectangle.java  Rond.java  Segment.java  Triangle.java  Vecteur2D.java
Serveur/ServeurPPIL/src/Main/: Main.java
Serveur/ServeurPPIL/src/dessin/: Dessin.java  DessinCroix.java  DessinRond.java  TraducteurCouleur.java
Serveur/ServeurPPIL/tests/: TestFormes.java
